fixed alignment of split-image list

--- a/front-end/src/public/css/howitworks.css
+++ b/front-end/src/public/css/howitworks.css
@@ -157,6 +157,7 @@
 	
 	.split-content  {
 		flex-direction: column;
+		align-items: flex-start;
 	}
 
 	.split-content.lifestyle {
@@ -164,7 +165,7 @@
 	}
 	.split-content-list {
 		text-align: initial;
-		margin-left: 8vw;
+		margin-left: 15vw;
 	}
 
 	.split-content-list h2 {
@@ -177,6 +178,7 @@
 		height: 60vw;
 		width: 90vw;	
 		border-radius: 0;
+		margin: auto;
 	}
 	.salary-by-year {
 		flex-flow: row wrap;
